# argus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-datastore-postgres-pgvector.md
eval/: golden.jsonl  judge_calibration.jsonl  red_team.jsonl  thresholds.json
eval/corpus/: 01_embeddings.md  02_ann_and_vector_databases.md  03_hnsw.md  04_ivf_and_quantization.md  05_lexical_bm25.md  06_hybrid_search_rrf.md  07_rerankers.md  08_chunking_contextual_retrieval.md  09_rag_architecture_and_evaluation.md  README.md
frontend/: biome.json  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/features/auth/: AuthModal.tsx  Profile.tsx  store.ts
frontend/src/features/chat/: ChatPage.tsx  store.ts  sync.ts  types.ts
frontend/src/features/chat/components/: Answer.tsx  AnswerView.tsx  Artifact.tsx  BorderBeam.tsx  ChatInput.tsx  Citation.tsx  Composer.tsx  IngestPanel.tsx  ProgressFeed.tsx  Related.tsx  Sidebar.tsx  Sources.tsx  SourcesStrip.tsx  Steps.tsx  TextShimmer.tsx  Turn.tsx
frontend/src/features/chat/hooks/: useAsk.ts  useChatStream.ts  useIngest.ts  useStickToBottom.ts
frontend/src/features/chat/lib/: source.ts
frontend/src/shared/lib/: api.ts  cn.ts  logger.ts  motion.ts  rehype-citations.ts
frontend/src/shared/ui/: Button.tsx  Spinner.tsx
k8s/: api.yaml  searcher-worker.yaml
scripts/: bench_retrieval.py  devstack.py  durable_crash_resume.py  loadtest.py  web.sh
scripts/migrations/: 0001_initial.sql  0002_tenant.sql  0003_users.sql  0004_conversations.sql
searxng/: settings.yml
src/argus/: __init__.py  auth.py  builders.py  cli.py  config.py  conversations.py  csrf.py  db.py  llm.py  logging.py  mcp_server.py  migrate.py  net.py  observability.py  worker.py
src/argus/agent/: __init__.py  adaptive.py  budget.py  durable.py  events.py  loop.py  orchestrator.py  prompts.py  sources.py
src/argus/eval/: __init__.py  calibration.py  dataset.py  harness.py  judge.py  metrics.py  red_team.py  runner.py
src/argus/rag/: __init__.py  chunking.py  context.py  embeddings.py  ingest.py  parse.py  rerank.py  retriever.py
src/argus/tools/: __init__.py  execute_python.py  rag_search.py  registry.py  web_fetch.py  web_search.py
src/argus/web/: __init__.py  errors.py  middleware.py  ratelimit.py  server.py
tests/: test_adaptive.py  test_auth.py  test_budget.py  test_chunking.py  test_config.py  test_conversations.py  test_cookie_auth.py  test_durable.py  test_embeddings.py  test_eval_calibration.py  test_eval_dataset.py  test_eval_judge.py  test_eval_metrics.py  test_eval_runner.py  test_execute_python.py  test_ingest.py  test_llm.py  test_loop.py  test_mcp_server.py  test_migrate.py  test_net.py  test_orchestrator.py  test_parse.py  test_rag_integration.py  test_rag_search.py  test_ratelimit.py  test_red_team.py  test_registry.py  test_rerank.py  test_smoke.py  test_sources.py  test_tenant_isolation.py  test_web_errors.py  test_web_fetch.py  test_web_search.py  test_web_server.py  test_worker_queue.py
