[project]
name = "argus"
version = "0.0.1"
description = "A framework-free, horizontally-autoscaled multi-agent deep-research engine. Own the loop, not the framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Subrata Mondal" }]
keywords = ["agents", "deep-research", "multi-agent", "llm", "framework-free", "kubernetes", "keda"]
dependencies = [
    "litellm>=1.55",       # single multi-provider LLM gateway under the hand-written loop
    "pydantic>=2.10",      # typed tool args + structured results
    "pydantic-settings>=2.7", # config via env (NEVER os.getenv)
    "structlog>=24.4",     # structured logging (NEVER print)
    "orjson>=3.10",        # fast JSON
    "httpx>=0.28",         # async HTTP for the SearXNG search tool + web_fetch
    "python-dotenv>=1.0",  # load .env provider keys into the environment for LiteLLM
    "trafilatura>=1.12",   # extract main page text for web_fetch + URL/HTML ingest
    "asyncpg>=0.30",       # async PostgreSQL driver for the pgvector datastore
    "pgvector>=0.4",       # vector type registration for asyncpg
]

[project.optional-dependencies]
# Heavy, lazily-imported extras. Core ingest (URL/HTML/Markdown) and the default
# rag_search path work without them; install when you need PDF/Office parsing or
# the cross-encoder rerank stage:  uv sync --extra parse --extra rerank
parse = ["docling>=2.96"]                  # PDF/DOCX/PPTX -> Markdown for ingest
rerank = ["sentence-transformers>=5.5"]    # bge-reranker-v2-m3 cross-encoder stage

[project.scripts]
argus = "argus.cli:main"

[project.urls]
Homepage = "https://github.com/subratamondal1/argus"
Repository = "https://github.com/subratamondal1/argus"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a1",         # Astral type checker (NEVER mypy/pyright)
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",         # httpx mocking for the search-tool test
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic-but-strict set: pyflakes, pycodestyle, isort, bugbear, comprehensions,
# pyupgrade, async-correctness, simplify. The eval/scale phases add more.
select = ["E", "F", "I", "B", "C4", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter, not linter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -m 'not integration'"
markers = [
    "integration: needs a live Postgres+pgvector and Ollama; deselected by default, run with -m integration",
]

[tool.ty.environment]
python-version = "3.12"
